# ViTTA

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.hub.yml  docker-compose.yml  generate_graphs.py  main.py  prepare_training_data.py  pyproject.toml  requirements.txt  track_demo.py  walkthrough.md  web_app.py
IDD_YOLO/: args.yaml
runs/vitta_merged/: args.yaml  results.csv
static/: app.js  styles.css
templates/: index.html
tests/: test_core.py
tools/: check_progress.py  convert_idd.py  convert_uvh26.py  merge_datasets.py  train.py
vitta/: __init__.py  class_names.py  config.py  frame_extractor.py  preprocessor.py  roi_selector.py
vitta/export/: __init__.py  excel_writer.py  pdf_charts.py  pdf_report.py
vitta/tracking/: __init__.py  config.py  csv_writer.py  csv_writer_v2.py  metrics.py  resampler.py  tracker.py  tracker_utils.py  visualizer.py
