[project]
name = "vitta"
version = "0.1.0"
description = "Video-based Traffic Trajectory extraction and Analysis tool for Indian mixed traffic conditions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "scipy>=1.15.0",
    "ultralytics>=8.4.41",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vitta*"]
