[project]
name = "vitta"
version = "0.1.0"
description = "Video-based Traffic Trajectory extraction and Analysis tool for Indian mixed traffic conditions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "fpdf2>=2.8.0",
    "jinja2>=3.1.4",
    "matplotlib>=3.8.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "scipy>=1.15.0",
    "torch==2.6.0+cu124",
    "torchaudio==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "ultralytics>=8.4.41",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vitta*"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
